# stock-financial-analysis

./: .gitignore  README.md  SKILL.md  skill.json
scripts/: all.py  balance.py  cashflow.py  comm.py  main.py  profit.py  pyproject.toml
